<resources>
    <string name="app_name">validation</string>

    <string name="sample_validation">Sample Validation</string>
    <string name="custom_error">This is my custom error!!</string>
    <string name="submit_form">Submit Form</string>
    <string name="forms">Forms</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="birth_date_hint">Birth date</string>

    <array name="sample_input_requirements">
        <item>com.hurtado.forms.validations.RequiredValidation</item>
        <item>com.hurtado.validation.validations.CustomMinCharValidation</item>
        <item>com.hurtado.validation.validations.CustomValidation</item>
        <item>com.hurtado.forms.validations.MaxCharValidation</item>
        <item>com.hurtado.forms.validations.SymbolsValidation</item>
    </array>

    <array name="sample_switch_requirements">
        <item>com.hurtado.forms.validations.AcceptanceValidation</item>
    </array>

    <array name="sample_int_requirements">
        <item>com.hurtado.forms.validations.MinValueValidation</item>
    </array>

    <array name="sample_calendar_requirements">
        <item>com.hurtado.forms.validations.FutureDateValidation</item>
    </array>

    <array name="sample_time_requirements">
        <item>com.hurtado.forms.validations.CloseValidation</item>
    </array>


</resources>
