<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hurtado.validation.activity.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.hurtado.forms.widget.base.FormGroup
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_top"
                android:gravity="center"
                android:text="@string/forms"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.hurtado.forms.widget.CalendarCompatField
                android:id="@+id/ff_calendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/ff_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:validate="@{viewModel.calendarValidations}">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="none"
                    android:clickable="false"
                    android:focusable="false"
                    android:id="@+id/birthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_date_hint" />
            </com.hurtado.forms.widget.CalendarCompatField>

            <com.hurtado.forms.widget.InputCompatField
                android:id="@+id/ff_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:validate="@{viewModel.usernameValidations}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_hint" />
            </com.hurtado.forms.widget.InputCompatField>

            <com.hurtado.forms.widget.InputCompatField
                android:id="@+id/ff_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/password_margin_top"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ff_username"
                app:validate="@{viewModel.passwordValidations}">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLines="1"
                    android:imeOptions="actionDone"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint" />
            </com.hurtado.forms.widget.InputCompatField>

            <com.hurtado.forms.widget.base.FormButton
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/submit_form"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:targetApi="lollipop" />

        </com.hurtado.forms.widget.base.FormGroup>
    </androidx.core.widget.NestedScrollView>
</layout>